<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SetlistPost">


    <TextView
        android:id="@+id/txt_longdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_longdate" />

    <TextView
        android:id="@+id/txtlocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_location" />

    <TextView
        android:id="@+id/txtsetlistdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_setlistdata" />

    <TextView
        android:id="@+id/txtsetlestnotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_setlistnote" />

    <Button
        android:id="@+id/btn_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_browser" />
</LinearLayout>