<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        android:layout_marginTop="5dp" android:layout_marginBottom="5dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_setlist_longdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/txt_longdate"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/txt_setlist_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/txt_location"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/txt_setlist_venue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/txt_Venue"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
